--- a/crew_website/home/templates/home/blocks/footer_block.html
+++ b/crew_website/home/templates/home/blocks/footer_block.html
@@ -26,8 +26,8 @@
                     <div class="col-md-6">
                         <ul class="list list-icons list-icons-lg">
                             <li class="mb-1"><i class="far fa-dot-circle text-color-primary"></i><p class="m-0">{{ value.address }}</p></li>
-                            <li class="mb-1"><i class="fab fa-whatsapp text-color-primary"></i><p class="m-0"><a href="tel:{{ value.phone }}">{{ value.phone }}</a></p></li>
-                            <li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0"><a href="mailto:{{ value.email }}">{{ value.email }}</a></p></li>
+                            <li class="mb-1"><i class="fab fa-whatsapp text-color-primary"></i><p class="m-0">{{ value.phone }}</p></li>
+                            <li class="mb-1"><i class="far fa-envelope text-color-primary"></i><p class="m-0">{{ value.email }}</p></li>
                         </ul>
                     </div>
                     <div class="col-md-6">
