--- a/crew_website/home/templates/home/blocks/style_switcher_block.html
+++ b/crew_website/home/templates/home/blocks/style_switcher_block.html
@@ -2,7 +2,7 @@
 
 <div class="container pt-4">
   <div class="row align-items-center py-5 appear-animation" data-appear-animation="fadeInRightShorter">
-    <div class="col-md-8 pe-md-5 mb-5 mb-md-0">
+    <div class="col-md-6 pe-md-5 mb-5 mb-md-0">
       <h2 class="font-weight-normal text-6 mb-3">
         <strong class="font-weight-extra-bold">{{ self.highlight }}</strong> {{ self.heading }}
       </h2>
@@ -11,7 +11,7 @@
         <p>{{ self.extra_text }}</p>
       {% endif %}
     </div>
-    <div class="col-md-4 px-5 px-md-3">
+    <div class="col-md-6 px-md-3">
       {% image self.image original class="img-fluid scale-2 my-4" alt="Style Switcher Image" %}
     </div>
   </div>
