--- a/crew_website/home/templates/home/blocks/fixed_solutions_block.html
+++ b/crew_website/home/templates/home/blocks/fixed_solutions_block.html
@@ -15,34 +15,42 @@
   </div>
 
   <div class="row">
-    {% for item in self.solutions %}
-      <div class="{% if forloop.counter <= 2 %}col-md-6{% else %}col-md-4{% endif %} mb-2 pb-2 px-2 appear-animation"
-           data-appear-animation="{% cycle 'fadeInRightShorter' 'fadeInLeftShorter' 'fadeInUpShorter' %}"
-           data-appear-animation-delay="{{ forloop.counter0|add:"1" }}00">
+    {% with self.solutions|length as total %}
+      {% for item in self.solutions %}
+        {% if total > 5 %}
+          <div class="col-md-4 mb-2 pb-2 px-2 appear-animation"
+               data-appear-animation="{% cycle 'fadeInRightShorter' 'fadeInLeftShorter' 'fadeInUpShorter' %}"
+               data-appear-animation-delay="{{ forloop.counter0|add:"1" }}00">
+        {% else %}
+          <div class="{% if forloop.counter <= 2 %}col-md-6{% else %}col-md-4{% endif %} mb-2 pb-2 px-2 appear-animation"
+               data-appear-animation="{% cycle 'fadeInRightShorter' 'fadeInLeftShorter' 'fadeInUpShorter' %}"
+               data-appear-animation-delay="{{ forloop.counter0|add:"1" }}00">
+        {% endif %}
 
-        <span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded thumb-info-centered-info thumb-info-no-zoom thumb-info-slide-info-hover">
-          <span class="thumb-info-wrapper thumb-info-wrapper-no-opacity {% if forloop.counter > 2 %}force-tall{% endif %}">
+          <span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded thumb-info-centered-info thumb-info-no-zoom thumb-info-slide-info-hover">
+            <span class="thumb-info-wrapper thumb-info-wrapper-no-opacity {% if forloop.counter > 2 %}force-tall{% endif %}">
 
-            {% image item.image fill-600x300 class="img-fluid" alt=item.image.title %}
+              {% image item.image fill-600x300 class="img-fluid" alt=item.image.title %}
 
-            <span class="thumb-info-title">
-              <span class="thumb-info-slide-info-hover-1">
-                <span class="thumb-info-inner text-4">{{ item.title }}</span>
-              </span>
-              <span class="thumb-info-slide-info-hover-2">
-                <span class="thumb-info-inner text-2">
-                  <a href="{{ item.link }}" class="d-inline-flex align-items-center btn btn-light text-color-dark font-weight-bold px-4 btn-py-2 text-1 rounded">
-                    {{ item.button_text|default:"Learn More" }}
-                    <i class="fa fa-arrow-right ms-2 ps-1 text-3"></i>
-                  </a>
+              <span class="thumb-info-title">
+                <span class="thumb-info-slide-info-hover-1">
+                  <span class="thumb-info-inner text-4">{{ item.title }}</span>
+                </span>
+                <span class="thumb-info-slide-info-hover-2">
+                  <span class="thumb-info-inner text-2">
+                    <a href="{{ item.link }}" class="d-inline-flex align-items-center btn btn-light text-color-dark font-weight-bold px-4 btn-py-2 text-1 rounded">
+                      {{ item.button_text|default:"Learn More" }}
+                      <i class="fa fa-arrow-right ms-2 ps-1 text-3"></i>
+                    </a>
+                  </span>
                 </span>
               </span>
+
             </span>
-
           </span>
-        </span>
 
-      </div>
-    {% endfor %}
+        </div>
+      {% endfor %}
+    {% endwith %}
   </div>
 </div>
